--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
     <string name="title_device">Device</string>
     <string name="title_people">People Management</string>
     <string name="title_settings">Settings</string>
+
+    <string name="name">Name</string>
+    <string name="save">Save</string>
+
 </resources>
