--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
 
     <string name="name">Name</string>
     <string name="save">Save</string>
+    <string name="next">Next</string>
 
 </resources>
