--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">ThermalApp</string>
     <string name="title_device">Device</string>
     <string name="title_people">People Management</string>
+    <string name="title_notification">Notification</string>
     <string name="title_settings">Settings</string>
 
     <string name="name">Name</string>
