change app name

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ThermalApp</string>
+    <string name="app_name">AI Infrared</string>
     <string name="title_device">Device</string>
     <string name="title_people">People Management</string>
     <string name="title_notification">Notification</string>
