QRCode invalid: 1. fix language to english, 2. fix black screen while invalid qrcode scanned

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,5 +38,6 @@
         .{}</string>
     <string name="confirm_remove_data">sure to delete data</string>
     <string name="title_alert_notification">Notification</string>
+    <string name="qrcode_invalid">QRCode is invalid</string>
 
 </resources>
