--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,8 +21,8 @@
     <string name="hint_device_overwrite">Device had paired, will overwrite setting</string>
     <string name="unable_to_connect_to_device">unable to connect to device...</string>
     <string name="add_first_device">add first device</string>
-    <string name="device_connected_click_to_watch_camera">Device connected.</string>
-    <string name="device_not_connected_yet">device not connected...</string>
+    <string name="device_connected_click_to_watch_camera">Device connected</string>
+    <string name="device_not_connected_yet">Device Not Connected</string>
     <string name="confirm_remove_device">sure to remove device</string>
 
     <!-- device relative -->
