--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,7 +38,7 @@
     <string name="please_enter_name">please enter name</string>
     <string name="please_not_enter_special_characters">please not enter special characters:
         .{}</string>
-    <string name="confirm_remove_data">sure to delete data</string>
+    <string name="confirm_remove_data">Are you sure to delete it?</string>
     <string name="title_alert_notification">Notification</string>
     <string name="qrcode_invalid">QRCode is invalid</string>
     <!-- calibration -->
