--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">智能熱像儀</string>
     <string name="title_device">裝置</string>
-    <string name="title_people">人員管理</string>
+    <string name="title_people">身份管理</string>
     <string name="title_notification">通知</string>
     <string name="title_settings">設定</string>
 
@@ -42,9 +42,6 @@
 <!--    <string name="confirm_remove_data">Are you sure to delete it?</string>-->
     <string name="title_alert_notification">警示</string>
     <string name="qrcode_invalid">無效的QR碼</string>
-    <!-- calibration -->
-<!--    <string name="error_load_rgb_image">failed to load rgb image</string>-->
-<!--    <string name="error_load_thermal_image">failed to load thermal image</string>-->
 
     <!-- record -->
     <string name="record_filter_error_date">日期時間的所有欄位均為必填</string>
@@ -125,7 +122,7 @@
     <string name="fragment_device_menu_wifi">Wi-Fi設定</string>
     <string name="fragment_device_menu_remove">移除當前裝置</string>
     <string name="fragment_device_toast">裝置尚未連上線</string>
-    <string name="fragment_app_setting">發燒通知</string>
+    <string name="fragment_app_setting">高溫通知</string>
 
 
     <!-- notification -->
