--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -26,7 +26,7 @@
     <string name="device_not_connected_yet">裝置未連上線</string>
     <string name="confirm_remove_device">確認要移除裝置?</string>
     <string name="dialog_add_device">新增裝置</string>
-<!--    <string name="dialog_connect_hotspot">Connect to Hotspot...</string>-->
+    <string name="dialog_connect_hotspot">連線到熱點...</string>
 
     <!-- device relative -->
     <!-- wifi -->
