1. remove unnecessary storage permission 2. ask for camera permission when user clicks the "add photo" button 3. update strings:   "add people" -> "add profile",    "Abnormal temperature detected" -> "Heat detected"

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -110,7 +110,7 @@
     <string name="activity_editor_invalid_age">Error: Invalid Age</string>
     <string name="activity_editor_male">Male</string>
     <string name="activity_editor_female">Female</string>
-    <string name="activity_editor_title">Add People</string>
+    <string name="activity_editor_title">Add Profile</string>
     <string name="activity_people_list_name">Name:</string>
     <string name="activity_people_list_age">Age:</string>
     <string name="activity_people_list_gender">Gender:</string>
@@ -126,6 +126,6 @@
 
 
     <!-- notification -->
-    <string name="notification_center_text">Abnormal temperature detected.</string>
+    <string name="notification_center_text">Heat detected.</string>
 
 </resources>
